crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsafe_function_leftover_raw_req.rs
unsafe fn leaves_dealloc_token(p: *mut i32)
//@ raw req DeallocToken({p}.addr, 4usize, 4usize);
{
}

fn main() {}
